DocsToKG/ui/backend/core/scripts/LatexParser.py
# Generated from Latex.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LatexParser ( Parser ):

    grammarFileName = "Latex.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'d'", "'\\frac'", "'\\sqrt'", "'\\sum'", 
                     "'\\prod'", "'\\int'", "'\\lim'", "'\\partial'", "'\\sin'", 
                     "'\\cos'", "'\\tan'", "'\\sec'", "'\\csc'", "'\\cot'", 
                     "'\\arcsin'", "'\\arccos'", "'\\arctan'", "'\\sinh'", 
                     "'\\cosh'", "'\\tanh'", "'\\log'", "'\\ln'", "'\\exp'", 
                     "'\\alpha'", "'\\beta'", "'\\gamma'", "'\\delta'", 
                     "'\\epsilon'", "'\\theta'", "'\\lambda'", "'\\mu'", 
                     "'\\pi'", "'\\sigma'", "'\\phi'", "'\\omega'", "'\\mathbf'", 
                     "'\\mathcal'", "'\\mathbb'", "'\\mathrm'", "'\\to'", 
                     "'\\infty'", "'+'", "'-'", "<INVALID>", "<INVALID>", 
                     "'='", "'\\neq'", "'<'", "'>'", "<INVALID>", "<INVALID>", 
                     "'\\odot'", "'\\otimes'", "'\\oplus'", "'*'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "'_'", "'^'", "'|'", 
                     "','", "'\\left'", "'\\right'", "'\\langle'", "'\\rangle'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "FRAC", "SQRT", "SUM", "PROD", 
                      "INT", "LIM", "PARTIAL", "SIN", "COS", "TAN", "SEC", 
                      "CSC", "COT", "ARCSIN", "ARCCOS", "ARCTAN", "SINH", 
                      "COSH", "TANH", "LOG", "LN", "EXP", "ALPHA", "BETA", 
                      "GAMMA", "DELTA", "EPSILON", "THETA", "LAMBDA", "MU", 
                      "PI", "SIGMA", "PHI", "OMEGA", "MATHBF", "MATHCAL", 
                      "MATHBB", "MATHRM", "TO", "INFTY", "PLUS", "MINUS", 
                      "TIMES", "DIV", "EQUALS", "NEQ", "LT", "GT", "LE", 
                      "GE", "ODOT", "OTIMES", "OPLUS", "STAR", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
                      "UNDERSCORE", "CARET", "PIPE", "COMMA", "LEFT", "RIGHT", 
                      "LANGLE", "RANGLE", "NUMBER", "WORD", "VARIABLE", 
                      "WS" ]

    RULE_document = 0
    RULE_expr = 1
    RULE_equation = 2
    RULE_relation = 3
    RULE_addExpr = 4
    RULE_mulExpr = 5
    RULE_highMulExpr = 6
    RULE_unaryExpr = 7
    RULE_powExpr = 8
    RULE_baseExpr = 9
    RULE_atom = 10
    RULE_atomBase = 11
    RULE_subscriptPart = 12
    RULE_superscriptPart = 13
    RULE_fraction = 14
    RULE_derivative = 15
    RULE_integral = 16
    RULE_limit = 17
    RULE_summation = 18
    RULE_product = 19
    RULE_sqrt = 20
    RULE_function = 21
    RULE_exprList = 22
    RULE_trigFunc = 23
    RULE_logFunc = 24
    RULE_customFunc = 25
    RULE_macro = 26
    RULE_leftRight = 27
    RULE_leftDelim = 28
    RULE_rightDelim = 29
    RULE_greekLetter = 30

    ruleNames =  [ "document", "expr", "equation", "relation", "addExpr", 
                   "mulExpr", "highMulExpr", "unaryExpr", "powExpr", "baseExpr", 
                   "atom", "atomBase", "subscriptPart", "superscriptPart", 
                   "fraction", "derivative", "integral", "limit", "summation", 
                   "product", "sqrt", "function", "exprList", "trigFunc", 
                   "logFunc", "customFunc", "macro", "leftRight", "leftDelim", 
                   "rightDelim", "greekLetter" ]

    EOF = Token.EOF
    T__0=1
    FRAC=2
    SQRT=3
    SUM=4
    PROD=5
    INT=6
    LIM=7
    PARTIAL=8
    SIN=9
    COS=10
    TAN=11
    SEC=12
    CSC=13
    COT=14
    ARCSIN=15
    ARCCOS=16
    ARCTAN=17
    SINH=18
    COSH=19
    TANH=20
    LOG=21
    LN=22
    EXP=23
    ALPHA=24
    BETA=25
    GAMMA=26
    DELTA=27
    EPSILON=28
    THETA=29
    LAMBDA=30
    MU=31
    PI=32
    SIGMA=33
    PHI=34
    OMEGA=35
    MATHBF=36
    MATHCAL=37
    MATHBB=38
    MATHRM=39
    TO=40
    INFTY=41
    PLUS=42
    MINUS=43
    TIMES=44
    DIV=45
    EQUALS=46
    NEQ=47
    LT=48
    GT=49
    LE=50
    GE=51
    ODOT=52
    OTIMES=53
    OPLUS=54
    STAR=55
    LPAREN=56
    RPAREN=57
    LBRACE=58
    RBRACE=59
    LBRACKET=60
    RBRACKET=61
    UNDERSCORE=62
    CARET=63
    PIPE=64
    COMMA=65
    LEFT=66
    RIGHT=67
    LANGLE=68
    RANGLE=69
    NUMBER=70
    WORD=71
    VARIABLE=72
    WS=73

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(LatexParser.ExprContext,0)


        def EOF(self):
            return self.getToken(LatexParser.EOF, 0)

        def getRuleIndex(self):
            return LatexParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = LatexParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.expr()
            self.state = 63
            self.match(LatexParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equation(self):
            return self.getTypedRuleContext(LatexParser.EquationContext,0)


        def getRuleIndex(self):
            return LatexParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = LatexParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.equation()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EquationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.RelationContext)
            else:
                return self.getTypedRuleContext(LatexParser.RelationContext,i)


        def EQUALS(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.EQUALS)
            else:
                return self.getToken(LatexParser.EQUALS, i)

        def getRuleIndex(self):
            return LatexParser.RULE_equation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquation" ):
                listener.enterEquation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEquation" ):
                listener.exitEquation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEquation" ):
                return visitor.visitEquation(self)
            else:
                return visitor.visitChildren(self)




    def equation(self):

        localctx = LatexParser.EquationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_equation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.relation()
            self.state = 72
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 68
                    self.match(LatexParser.EQUALS)
                    self.state = 69
                    self.relation() 
                self.state = 74
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.AddExprContext)
            else:
                return self.getTypedRuleContext(LatexParser.AddExprContext,i)


        def LT(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.LT)
            else:
                return self.getToken(LatexParser.LT, i)

        def GT(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.GT)
            else:
                return self.getToken(LatexParser.GT, i)

        def LE(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.LE)
            else:
                return self.getToken(LatexParser.LE, i)

        def GE(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.GE)
            else:
                return self.getToken(LatexParser.GE, i)

        def NEQ(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.NEQ)
            else:
                return self.getToken(LatexParser.NEQ, i)

        def getRuleIndex(self):
            return LatexParser.RULE_relation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelation" ):
                listener.enterRelation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelation" ):
                listener.exitRelation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelation" ):
                return visitor.visitRelation(self)
            else:
                return visitor.visitChildren(self)




    def relation(self):

        localctx = LatexParser.RelationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_relation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.addExpr()
            self.state = 80
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 76
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4362862139015168) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 77
                    self.addExpr() 
                self.state = 82
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mulExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.MulExprContext)
            else:
                return self.getTypedRuleContext(LatexParser.MulExprContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.PLUS)
            else:
                return self.getToken(LatexParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.MINUS)
            else:
                return self.getToken(LatexParser.MINUS, i)

        def getRuleIndex(self):
            return LatexParser.RULE_addExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddExpr" ):
                listener.enterAddExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddExpr" ):
                listener.exitAddExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddExpr" ):
                return visitor.visitAddExpr(self)
            else:
                return visitor.visitChildren(self)




    def addExpr(self):

        localctx = LatexParser.AddExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_addExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.mulExpr()
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 84
                    _la = self._input.LA(1)
                    if not(_la==42 or _la==43):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 85
                    self.mulExpr() 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MulExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def highMulExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.HighMulExprContext)
            else:
                return self.getTypedRuleContext(LatexParser.HighMulExprContext,i)


        def TIMES(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.TIMES)
            else:
                return self.getToken(LatexParser.TIMES, i)

        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.STAR)
            else:
                return self.getToken(LatexParser.STAR, i)

        def getRuleIndex(self):
            return LatexParser.RULE_mulExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulExpr" ):
                listener.enterMulExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulExpr" ):
                listener.exitMulExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulExpr" ):
                return visitor.visitMulExpr(self)
            else:
                return visitor.visitChildren(self)




    def mulExpr(self):

        localctx = LatexParser.MulExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mulExpr)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.highMulExpr()
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 92
                        _la = self._input.LA(1)
                        if not(_la==44 or _la==55):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 93
                        self.highMulExpr() 
                    self.state = 98
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.highMulExpr()
                self.state = 101 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 100
                        self.highMulExpr()

                    else:
                        raise NoViableAltException(self)
                    self.state = 103 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HighMulExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.UnaryExprContext)
            else:
                return self.getTypedRuleContext(LatexParser.UnaryExprContext,i)


        def ODOT(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.ODOT)
            else:
                return self.getToken(LatexParser.ODOT, i)

        def OTIMES(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.OTIMES)
            else:
                return self.getToken(LatexParser.OTIMES, i)

        def OPLUS(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.OPLUS)
            else:
                return self.getToken(LatexParser.OPLUS, i)

        def getRuleIndex(self):
            return LatexParser.RULE_highMulExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHighMulExpr" ):
                listener.enterHighMulExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHighMulExpr" ):
                listener.exitHighMulExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHighMulExpr" ):
                return visitor.visitHighMulExpr(self)
            else:
                return visitor.visitChildren(self)




    def highMulExpr(self):

        localctx = LatexParser.HighMulExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_highMulExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.unaryExpr()
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 108
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 31525197391593472) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 109
                    self.unaryExpr() 
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINUS(self):
            return self.getToken(LatexParser.MINUS, 0)

        def unaryExpr(self):
            return self.getTypedRuleContext(LatexParser.UnaryExprContext,0)


        def PLUS(self):
            return self.getToken(LatexParser.PLUS, 0)

        def powExpr(self):
            return self.getTypedRuleContext(LatexParser.PowExprContext,0)


        def getRuleIndex(self):
            return LatexParser.RULE_unaryExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryExpr" ):
                listener.enterUnaryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryExpr" ):
                listener.exitUnaryExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryExpr" ):
                return visitor.visitUnaryExpr(self)
            else:
                return visitor.visitChildren(self)




    def unaryExpr(self):

        localctx = LatexParser.UnaryExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_unaryExpr)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [43]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(LatexParser.MINUS)
                self.state = 116
                self.unaryExpr()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(LatexParser.PLUS)
                self.state = 118
                self.unaryExpr()
                pass
            elif token in [2, 3, 4, 5, 6, 7, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 56, 58, 60, 66, 70, 71, 72]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.powExpr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PowExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def baseExpr(self):
            return self.getTypedRuleContext(LatexParser.BaseExprContext,0)


        def CARET(self, i:int=None):
            if i is None:
                return self.getTokens(LatexParser.CARET)
            else:
                return self.getToken(LatexParser.CARET, i)

        def superscriptPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatexParser.SuperscriptPartContext)
            else:
                return self.getTypedRuleContext(LatexParser.SuperscriptPartContext,i)


        def getRuleIndex(self):
            return LatexParser.RULE_powExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPowExpr" ):
                listener.enterPowExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPowExpr" ):
                listener.exitPowExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPowExpr" ):
                return visitor.visitPowExpr(self)
            else:
                return visitor.visitChildren(self)




    def powExpr(self):

        localctx = LatexParser.PowExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_powExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.baseExpr()
            self.state = 127
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 123
                    self.match(LatexParser.CARET)
                    self.state = 124
                    self.superscriptPart() 
                self.state = 129
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(LatexParser.AtomContext,0)


        def function(self):
            return self.getTypedRuleContext(LatexParser.FunctionContext,0)


        def fraction(self):
            return self.getTypedRuleContext(LatexParser.FractionContext,0)


        def derivative(self):
            return self.getTypedRuleContext(LatexParser.DerivativeContext,0)


        def integral(self):
            return self.getTypedRuleContext(LatexParser.IntegralContext,0)


        def limit(self):
            return self.getTypedRuleContext(LatexParser.LimitContext,0)


        def summation(self):
            return self.getTypedRuleContext(LatexParser.SummationContext,0)


        def product(self):
            return self.getTypedRuleContext(LatexParser.ProductContext,0)

